# app/Http/Controllers/UserController.php
@@ -69,3 +69,113 @@ use Illuminate\Http\Request;
  * )
  *
  */
+
+  // REGISTER AHLI_PRAKTISI
+/**
+ * @SWG\Post(
+ *   tags={"Ahli_Praktisi"},
+ *   path="/register_ahli",
+ *   summary="Register Ahli Praktisi",
+ *   operationId="regisAhli",
+ *   @SWG\Parameter(
+ *     name="body",
+ *     in="body",
+ *     required=true,
+ *     description="Register Ahli Praktisi",
+ *     @SWG\Schema( 
+ *          @SWG\Property(
+ *              property="name",
+ *              type="string"
+ *          ),
+ *          @SWG\Property(
+ *              property="email",
+ *              type="string"
+ *          ),
+ *          @SWG\Property(
+ *              property="password",
+ *              type="string"
+ *          ),
+ *          @SWG\Property(
+ *              property="c_password",
+ *              type="string"
+ *          ),
+ *          @SWG\Property(
+ *              property="komoditas",
+ *              type="string"
+ *          ),
+ *     )
+ *   ),
+ *   @SWG\Response(response=200, description="successful operation"),
+ *   @SWG\Response(response=401, description="unauthorized"),
+ * )
+ *
+ */
+
+  // edit Profile
+/**
+ * @SWG\Put(
+ *   tags={"user"},
+ *   path="/user/{id}",
+ *   summary="edit profile user",
+ *   operationId="editProfilUser",
+ *   @SWG\Parameter(
+ *     name="id",
+ *     in="path",
+ *     type="integer",
+ *     description="user id",
+ *   ),
+ *   @SWG\Parameter(
+ *     name="body",
+ *     in="body",
+ *     required=true,
+ *     description="Login first before using this api",
+ *     @SWG\Schema( 
+ *          @SWG\Property(
+ *              property="name",
+ *              type="string"
+ *          ),
+ *          @SWG\Property(
+ *              property="email",
+ *              type="string"
+ *          ),
+ *          @SWG\Property(
+ *              property="no_hp",
+ *              type="string"
+ *          ),
+ *          @SWG\Property(
+ *              property="alamat",
+ *              type="string"
+ *          ),
+ *     )
+ *   ),
+ *   @SWG\Response(response=200, description="successful operation"),
+ *   @SWG\Response(response=401, description="unauthorized"),
+ *   security={{"Bearer":{}}}
+ * )
+ *
+ */
+
+ //Upload FILE
+ /**
+ * @SWG\Post(
+ *   tags={"user"},
+ *   path="/user_foto/{id}",
+ *   summary="edit foto user",
+ *   operationId="ImageUploadUser",
+ *   @SWG\Parameter(
+ *     name="id",
+ *     in="path",
+ *     type="integer",
+ *     description="user id",
+ *   ),
+ *   @SWG\Parameter(
+ *     name="image",
+ *     in="formData",
+ *     type="file",
+ *     description="the file you upload",
+ *   ),
+ *   @SWG\Response(response=200, description="successful"),
+ *   security={{"Bearer":{}}}
+ * )
+ *
+ */
